fix eventSingle metadata spacing

--- a/src/app/modules/event/EventSingle/EventSingle.scss
+++ b/src/app/modules/event/EventSingle/EventSingle.scss
@@ -82,13 +82,14 @@
     font-weight: bold;
     text-align: left;
     width: 100%;
+    margin-bottom: 10px;
   }
 
   p {
     font-family: $font-body;
     font-size: 18px;
     font-weight: 100;
-    margin-bottom: 0;
+    margin-bottom: 5px;
   }
 }
 @media (max-width: 990px) {
